# COBot

./: .gitignore  README.md  pyproject.toml
cobot/: __main__.py  bot.py
cobot/ext/: cmds.py  events.py
