[tool.poetry]
name = "cobot"
version = "0.9.9"
description = "A Discord bot for bullying those that are too active in a server."
authors = ["m1stadev <adamhamdi31@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
cobot = "cobot.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.0"
aiopath = "^0.6"

asqlite = {git = "https://github.com/Rapptz/asqlite.git"}
jishaku = {git = "https://github.com/Gorialis/jishaku.git"}

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
